turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:70: error: expected class or object definition
def faireLigne() {
^Source:92: error: Unmatched closing brace '}' ignored here
}
^