turtleart.lessons.turtleart.Main.HouseMany.scala.code
override def run() {
	faireLigne()
	} // Fin ligne maisons
	leveCrayon()
	droite(90)
	recule(200)
	gauche(90)
	avance(75)
	baisseCrayon() //Monte d'une ligne
	
	avance(30)
	droite(30)
	for(i<-1 to 3) {
			avance(30)
			droite(120)
	}
	droite(60)
	for(i<-1 to 3) {
		avance(30)
		droite(90)
	}
	leveCrayon()
	droite(90)
	avance(150)
	gauche(90)
	baisseCrayon()
	avance(30)
	droite(30)
	for(i<-1 to 3) {
			avance(30)
			droite(120)
	}
	droite(60)
	for(i<-1 to 3) {
		avance(30)
		droite(90)
	}
	leveCrayon()
	droite(90)
	recule(200)
	gauche(90)
	avance(75)
	baisseCrayon()
	for (c<-1 to 4) {
		avance(30)
		droite(30)
		for(i<-1 to 3) {
			avance(30)
			droite(120)
		}
		droite(60)
		for(i<-1 to 3) {
			avance(30)
			droite(90)
		}
		leveCrayon()
		droite(90)
		avance(50)
		gauche(90)
		baisseCrayon()
	}
	leveCrayon()
	droite(90)
	recule(200)
	gauche(90)
	avance(75)
	baisseCrayon()
}

def faireLigne() {
	for (c<-1 to 4) { //Début ligne maisons
		avance(30)
		droite(30)
		for(i<-1 to 3) {
			avance(30)
			droite(120)
		}
		droite(60)
		for(i<-1 to 3) {
			avance(30)
			droite(90)
		}
		leveCrayon()
		droite(90)
		avance(50)
		gauche(90)
		baisseCrayon()
	}
}
